# drf_personal_project

./: .gitignore  api_arc.md  pyproject.toml
conf/: settings.py  urls.py
todo/: models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
